Fix horizontal scroll bar

--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
 	min-height: max(300px,100%);
 	min-width: 300px;
 	background-image: linear-gradient(#158dc1, #923be6);
+	overflow: clip;
 }
 
 h1 {
